--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,22 @@
 .App {
+  margin-top: 100px;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#root .button {
+  margin-left: 11px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.progress-day {
+  display: block;
+  width: 5px;
+  height: 27px;
+  background: #000;
+  content: "";
+  position: absolute;
+  z-index: 1000;
+  top: -1px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#root .progress .label {
+  position: initial;
 }
